syntax = "proto3";

package stocktrading;
option java_multiple_files=true;
option java_package="com.spring_grpc.grpc";
option java_outer_classname="StockTradingProto";

service StockTradingService {

  // Unary - RPC -> get current stock price
  rpc getStock(StockRequest) returns (StockResponse);

}

message StockRequest {
  string stock_symbol=1;
}

message StockResponse {
  string stock_symbol=1;
  double price=2;
  string timestamp=3;
}